[tool.poetry]
name = "clientify-python"
version = "1.0.0"
description = "API wrapper for Clientify written in Python"
authors = ["Miguel Ferrer <ingferrermiguel@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "clientify"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

